force-app/main/default/objects/Quote_Home__dlm/fields/AdditionalCity__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCity__c</fullName>
    <label>Ville d&apos;expédition supplémentaire</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Ville d&apos;expédition supplémentaire</labelOverride>
        <masterLabel>Ville d&apos;expédition supplémentaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>