force-app/main/default/objects/Quote_Home__dlm/fields/AdditionalGeocodeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>AdditionalGeocodeAccuracy__c</fullName>
    <label>AdditionalGeocodeAccuracy</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AdditionalGeocodeAccuracy</labelOverride>
        <masterLabel>AdditionalGeocodeAccuracy</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>