force-app/main/default/objects/Quote_Home__dlm/fields/AdditionalLongitude__c.field-meta.xml
<CustomField>
    <fullName>AdditionalLongitude__c</fullName>
    <label>Longitude d&apos;expédition supplémentaire</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Longitude d&apos;expédition supplémentaire</labelOverride>
        <masterLabel>Longitude d&apos;expédition supplémentaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>