force-app/main/default/objects/Quote_Home__dlm/fields/AdditionalName__c.field-meta.xml
<CustomField>
    <fullName>AdditionalName__c</fullName>
    <label>AdditionalName</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AdditionalName</labelOverride>
        <masterLabel>AdditionalName</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>