force-app/main/default/objects/Quote_Home__dlm/fields/AdditionalPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AdditionalPostalCode__c</fullName>
    <label>Code postal d&apos;expédition supplémentaire</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Code postal d&apos;expédition supplémentaire</labelOverride>
        <masterLabel>Code postal d&apos;expédition supplémentaire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>