force-app/main/default/objects/Quote_Home__dlm/fields/AdditionalState__c.field-meta.xml
<CustomField>
    <fullName>AdditionalState__c</fullName>
    <label>AdditionalState</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AdditionalState</labelOverride>
        <masterLabel>AdditionalState</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>