force-app/main/default/objects/Quote_Home__dlm/fields/API_Complement_Prix_Spot_c__c.field-meta.xml
<CustomField>
    <fullName>API_Complement_Prix_Spot_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API : Complément Prix Spot</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API : Complément Prix Spot</labelOverride>
        <masterLabel>API : Complément Prix Spot</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>