force-app/main/default/objects/Quote_Home__dlm/fields/API_Contournement_Liasse_Fiscale_c__c.field-meta.xml
<CustomField>
    <fullName>API_Contournement_Liasse_Fiscale_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API : Contournement Liasse Fiscale</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API : Contournement Liasse Fiscale</labelOverride>
        <masterLabel>API : Contournement Liasse Fiscale</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>