force-app/main/default/objects/Quote_Home__dlm/fields/API_Date_demande_c__c.field-meta.xml
<CustomField>
    <fullName>API_Date_demande_c__c</fullName>
    <label>API : Date de la demande</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API : Date de la demande</labelOverride>
        <masterLabel>API : Date de la demande</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>