force-app/main/default/objects/Quote_Home__dlm/fields/API_Derogation_Penalites_Retard_c__c.field-meta.xml
<CustomField>
    <fullName>API_Derogation_Penalites_Retard_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API : Dérogation Pénalités Retard</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API : Dérogation Pénalités Retard</labelOverride>
        <masterLabel>API : Dérogation Pénalités Retard</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>