force-app/main/default/objects/Quote_Home__dlm/fields/Api_error_message_c__c.field-meta.xml
<CustomField>
    <fullName>Api_error_message_c__c</fullName>
    <label>Message d&apos;erreur API</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Message d&apos;erreur API</labelOverride>
        <masterLabel>Message d&apos;erreur API</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>