force-app/main/default/objects/Quote_Home__dlm/fields/API_Formule_Prix_c__c.field-meta.xml
<CustomField>
    <fullName>API_Formule_Prix_c__c</fullName>
    <label>API : Formule Prix</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API : Formule Prix</labelOverride>
        <masterLabel>API : Formule Prix</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>