force-app/main/default/objects/Quote_Home__dlm/fields/API_Immatriculation_SDC_c__c.field-meta.xml
<CustomField>
    <fullName>API_Immatriculation_SDC_c__c</fullName>
    <label>API : Immatriculation SDC</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API : Immatriculation SDC</labelOverride>
        <masterLabel>API : Immatriculation SDC</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>