force-app/main/default/objects/Quote_Home__dlm/fields/API_pE_Manuel_c__c.field-meta.xml
<CustomField>
    <fullName>API_pE_Manuel_c__c</fullName>
    <label>API : pE Manuel</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API : pE Manuel</labelOverride>
        <masterLabel>API : pE Manuel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>