force-app/main/default/objects/Quote_Home__dlm/fields/API_Prix_Horosaisonnier_c__c.field-meta.xml
<CustomField>
    <fullName>API_Prix_Horosaisonnier_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API : Prix Horosaisonnier</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API : Prix Horosaisonnier</labelOverride>
        <masterLabel>API : Prix Horosaisonnier</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>