force-app/main/default/objects/Quote_Home__dlm/fields/Api_status_c__c.field-meta.xml
<CustomField>
    <fullName>Api_status_c__c</fullName>
    <label>API Statut</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API Statut</labelOverride>
        <masterLabel>API Statut</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>