force-app/main/default/objects/Quote_Home__dlm/fields/API_Taux_Garantie_Origine_c__c.field-meta.xml
<CustomField>
    <fullName>API_Taux_Garantie_Origine_c__c</fullName>
    <label>API : Taux Garantie Origine</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API : Taux Garantie Origine</labelOverride>
        <masterLabel>API : Taux Garantie Origine</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>