force-app/main/default/objects/Quote_Home__dlm/fields/API_Type_Client_c__c.field-meta.xml
<CustomField>
    <fullName>API_Type_Client_c__c</fullName>
    <label>API : Type Client</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>API : Type Client</labelOverride>
        <masterLabel>API : Type Client</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>