force-app/main/default/objects/Quote_Home__dlm/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <label>Pays de facturation</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Pays de facturation</labelOverride>
        <masterLabel>Pays de facturation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>