force-app/main/default/objects/Quote_Home__dlm/fields/BillingGeocodeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>BillingGeocodeAccuracy__c</fullName>
    <label>BillingGeocodeAccuracy</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>BillingGeocodeAccuracy</labelOverride>
        <masterLabel>BillingGeocodeAccuracy</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>