force-app/main/default/objects/Quote_Home__dlm/fields/BillingLatitude__c.field-meta.xml
<CustomField>
    <fullName>BillingLatitude__c</fullName>
    <label>Latitude de l&apos;adresse de facturation</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Latitude de l&apos;adresse de facturation</labelOverride>
        <masterLabel>Latitude de l&apos;adresse de facturation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>