force-app/main/default/objects/Quote_Home__dlm/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>Rue de facturation</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Rue de facturation</labelOverride>
        <masterLabel>Rue de facturation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>