force-app/main/default/objects/Quote_Home__dlm/fields/Calcul_grille_c__c.field-meta.xml
<CustomField>
    <fullName>Calcul_grille_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calcul grille</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Calcul grille</labelOverride>
        <masterLabel>Calcul grille</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>