force-app/main/default/objects/Quote_Home__dlm/fields/CanCreateQuoteLineItems__c.field-meta.xml
<CustomField>
    <fullName>CanCreateQuoteLineItems__c</fullName>
    <label>CanCreateQuoteLineItems</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CanCreateQuoteLineItems</labelOverride>
        <masterLabel>CanCreateQuoteLineItems</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>