force-app/main/default/objects/Quote_Home__dlm/fields/CAPA_c__c.field-meta.xml
<CustomField>
    <fullName>CAPA_c__c</fullName>
    <label>CAPA</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CAPA</labelOverride>
        <masterLabel>CAPA</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>