force-app/main/default/objects/Quote_Home__dlm/fields/CEE_c__c.field-meta.xml
<CustomField>
    <fullName>CEE_c__c</fullName>
    <label>CEE</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CEE</labelOverride>
        <masterLabel>CEE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>