force-app/main/default/objects/Quote_Home__dlm/fields/ConsoAnnuelleGarantieOrigine_c__c.field-meta.xml
<CustomField>
    <fullName>ConsoAnnuelleGarantieOrigine_c__c</fullName>
    <label>Consommation annuelle (MWh)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Consommation annuelle (MWh)</labelOverride>
        <masterLabel>Consommation annuelle (MWh)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>