force-app/main/default/objects/Quote_Home__dlm/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <label>ID du contrat</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ID du contrat</labelOverride>
        <masterLabel>ID du contrat</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>