force-app/main/default/objects/Quote_Home__dlm/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <label>ID créé par</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ID créé par</labelOverride>
        <masterLabel>ID créé par</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>