force-app/main/default/objects/Quote_Home__dlm/fields/Date_de_fin_de_contrat_c__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_contrat_c__c</fullName>
    <label>Date de fin de contrat</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de fin de contrat</labelOverride>
        <masterLabel>Date de fin de contrat</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>