force-app/main/default/objects/Quote_Home__dlm/fields/Date_Validite_Offre_API_Endesa_Elec_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Validite_Offre_API_Endesa_Elec_c__c</fullName>
    <label>Date Validité Offre API Endesa Elec</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date Validité Offre API Endesa Elec</labelOverride>
        <masterLabel>Date Validité Offre API Endesa Elec</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>