force-app/main/default/objects/Quote_Home__dlm/fields/Date_Validite_Offre_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Validite_Offre_c__c</fullName>
    <label>Date de validité de l&apos;offre</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de validité de l&apos;offre</labelOverride>
        <masterLabel>Date de validité de l&apos;offre</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>