force-app/main/default/objects/Quote_Home__dlm/fields/DebutCouvertureGarantieOrigine_c__c.field-meta.xml
<CustomField>
    <fullName>DebutCouvertureGarantieOrigine_c__c</fullName>
    <label>Début de Couverture</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Début de Couverture</labelOverride>
        <masterLabel>Début de Couverture</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>