force-app/main/default/objects/Quote_Home__dlm/fields/Distribution_c__c.field-meta.xml
<CustomField>
    <fullName>Distribution_c__c</fullName>
    <label>Distribution</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Distribution</labelOverride>
        <masterLabel>Distribution</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>