force-app/main/default/objects/Quote_Home__dlm/fields/Duree_offre_en_mois_c__c.field-meta.xml
<CustomField>
    <fullName>Duree_offre_en_mois_c__c</fullName>
    <label>Durée de l&apos;offre (en mois)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Durée de l&apos;offre (en mois)</labelOverride>
        <masterLabel>Durée de l&apos;offre (en mois)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>