force-app/main/default/objects/Quote_Home__dlm/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>E-mail</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>E-mail</labelOverride>
        <masterLabel>E-mail</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Email</type>
</CustomField>