force-app/main/default/objects/Quote_Home__dlm/fields/Engie_demand_date_c__c.field-meta.xml
<CustomField>
    <fullName>Engie_demand_date_c__c</fullName>
    <label>Engie : date de la demande</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Engie : date de la demande</labelOverride>
        <masterLabel>Engie : date de la demande</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>