force-app/main/default/objects/Quote_Home__dlm/fields/Engie_green_energy_c__c.field-meta.xml
<CustomField>
    <fullName>Engie_green_energy_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engie : énergie verte</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Engie : énergie verte</labelOverride>
        <masterLabel>Engie : énergie verte</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>