force-app/main/default/objects/Quote_Home__dlm/fields/Engie_idSimulation_c__c.field-meta.xml
<CustomField>
    <fullName>Engie_idSimulation_c__c</fullName>
    <label>Engie : id Simulation</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Engie : id Simulation</labelOverride>
        <masterLabel>Engie : id Simulation</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>