force-app/main/default/objects/Quote_Home__dlm/fields/Engie_idTransaction_c__c.field-meta.xml
<CustomField>
    <fullName>Engie_idTransaction_c__c</fullName>
    <label>Engie : id Transaction</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Engie : id Transaction</labelOverride>
        <masterLabel>Engie : id Transaction</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>