force-app/main/default/objects/Quote_Home__dlm/fields/Engie_margin_c__c.field-meta.xml
<CustomField>
    <fullName>Engie_margin_c__c</fullName>
    <label>Engie : marge à partager (en €)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Engie : marge à partager (en €)</labelOverride>
        <masterLabel>Engie : marge à partager (en €)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>